fix: remove black bars from image on mobile view

--- a/static/styles.css
+++ b/static/styles.css
@@ -147,7 +147,9 @@ footer .error {
   }
 
   img {
+    aspect-ratio: 16 / 9;
     height: auto;
+    object-fit: cover;
     width: 100%;
   }
 }
